Commit para la clase de ramas

--- a/blogpostprueba.html
+++ b/blogpostprueba.html
@@ -4,7 +4,11 @@
          <link rel="stylesheet" href="css/estilosBlog.css" />
      </head>
      <body>
-         <h1>El título principal</h1>
-         <p>Este es el párrafo de incio</p>
-     </body>
+         <div id="container">
+             <div id="post"> 
+                 <h1>Este es un blogpost de prueba</h1>
+                 <p>Párrafo de inicio para probar las ramas</p>
+             </div>
+         </div>
+    </body>
  </html>
