--- a/blogpostprueba.html
+++ b/blogpostprueba.html
@@ -5,7 +5,10 @@
      </head>
      <body>
          <div id="container">
-             <div id="post"> 
+            <div id ="cabecera">
+                Cabecera
+            </div> 
+            <div id="post"> 
                  <h1>Este es un blogpost de prueba</h1>
                  <p>Párrafo de inicio para probar las ramas</p>
              </div>
