Actualizción de la cabecera quedó más bonita

--- a/blogpostprueba.html
+++ b/blogpostprueba.html
@@ -6,7 +6,8 @@
      <body>
          <div id="container">
             <div id ="cabecera">
-                Cabecera
+                Super hiper mega blog
+            <span id="tagline"> La chimba </span>    
             </div> 
             <div id="post"> 
                  <h1>Este es un blogpost de prueba</h1>
