--- a/blogpostprueba.html
+++ b/blogpostprueba.html
@@ -8,6 +8,7 @@
              <div id="post"> 
                  <h1>Este es un blogpost de prueba</h1>
                  <p>Párrafo de inicio para probar las ramas</p>
+                 <p>Esto es para agregar información en el blog de prueba de Git</p>
              </div>
          </div>
     </body>
