--- a/blogpostprueba.html
+++ b/blogpostprueba.html
@@ -7,7 +7,7 @@
          <div id="container">
             <div id ="cabecera">
                 Super hiper mega blog
-            <span id="tagline"> La chimba </span>    
+            <span id="tagline">Soy conflictivo</span>    
             </div> 
             <div id="post"> 
                  <h1>Este es un blogpost de prueba</h1>
