Se agregan vulgaridades y se cambia el color de la letra

--- a/blogpostprueba.html
+++ b/blogpostprueba.html
@@ -7,12 +7,13 @@
          <div id="container">
             <div id ="cabecera">
                 Super hiper mega blog
-            <span id="tagline"> La chimba </span>    
+            <span id="tagline"> Tu blog la retrochimba </span>    
             </div> 
             <div id="post"> 
                  <h1>Este es un blogpost de prueba</h1>
                  <p>Párrafo de inicio para probar las ramas</p>
                  <p>Esto es para agregar información en el blog de prueba de Git</p>
+                 <p>Mas guevonadas</p> 
              </div>
          </div>
     </body>
