Prueba de cambio de título
De una

--- a/blogpostprueba.html
+++ b/blogpostprueba.html
@@ -1,6 +1,6 @@
  <html>
      <head>
-         <title>TITULAZO DEL POST</title>
+         <title>TITULAZO DEL POST, CAMBIADO EN GIT HUB</title>
          <link rel="stylesheet" href="css/estilosBlog.css" />
      </head>
      <body>
