--- a/blogpostprueba.html
+++ b/blogpostprueba.html
@@ -6,7 +6,7 @@
      <body>
          <div id="container">
             <div id ="cabecera">
-                Super hiper mega blog
+                Super hiper mega blog version 1.2
             <span id="tagline"> Tu blog la retrochimba </span>    
             </div> 
             <div id="post"> 
