Logo, color fondo, color letra, fondo negro, quedó más chimbita

--- a/blogpostprueba.html
+++ b/blogpostprueba.html
@@ -6,6 +6,7 @@
      <body>
          <div id="container">
             <div id ="cabecera">
+                <img id="logo" src="imagenes/HeaderBaki.jpg"/>
                 Super hiper mega blog version 1.2
             <span id="tagline"> Tu blog la retrochimba </span>    
             </div> 
