--- a/blogpostprueba.html
+++ b/blogpostprueba.html
@@ -7,7 +7,7 @@
          <div id="container">
             <div id ="cabecera">
                 <img id="logo" src="imagenes/HeaderBaki.jpg"/>
-                Super hiper mega blog version 1.2
+                Super hiper mega blog version 1.3
             <span id="tagline"> Tu blog la retrochimba </span>    
             </div> 
             <div id="post"> 
@@ -16,6 +16,7 @@
                  <p>Esto es para agregar informaci&oacute;n en el blog de prueba de Git</p>
                  <p>Más guevonadas</p> 
                  <p>Ahora más cosas</p> 
+                 <p>Probando el Pull request</p> 
              </div>
          </div>
     </body>
