--- a/blogpostprueba.html
+++ b/blogpostprueba.html
@@ -16,7 +16,7 @@
                  <p>Esto es para agregar informaci&oacute;n en el blog de prueba de Git</p>
                  <p>Más guevonadas</p> 
                  <p>Ahora más cosas</p> 
-                 <p>Probando el Pull request</p> 
+                 <p>Probando el Pull request y más cosas por ahí XD</p> 
              </div>
          </div>
     </body>
