--- a/blogpostprueba.html
+++ b/blogpostprueba.html
@@ -7,14 +7,16 @@
          <div id="container">
             <div id ="cabecera">
                 <img id="logo" src="imagenes/HeaderBaki.jpg"/>
-                Super hiper mega blog version 1.2
+                Super hiper mega blog version 1.3 Es el mejor de la vida
             <span id="tagline"> Tu blog la retrochimba </span>    
             </div> 
             <div id="post"> 
                  <h1>Este es un blogpost de prueba</h1>
                  <p>Párrafo de inicio para probar las ramas</p>
                  <p>Esto es para agregar información en el blog de prueba de Git</p>
-                 <p>Mas guevonadas</p> 
+                 <p>Mas guevonadas</p>
+                 <p>Ahora más cosas</p> 
+                 <p>Probando el Pull request y más cosas por ahí XD</p> 
              </div>
          </div>
     </body>
