Probando enlace con servidor de imágenes

--- a/blogpostprueba.html
+++ b/blogpostprueba.html
@@ -14,7 +14,7 @@
                  <h1>Este es un blogpost de prueba</h1>
                  <p>Párrafo de inicio para probar las ramas</p>
                  <p>Esto es para agregar información en el blog de prueba de Git</p>
-                 <p><img src= "imagenes/730_w400.jpg"/></p>
+                 <p><img src= "<a href="https://imgur.com/6mClyoI"><img src="https://i.imgur.com/6mClyoI.jpg" title="source: imgur.com" /></a>"/></p>
                  <p>Mas guevonadas</p>
                  <p>Ahora más cosas</p> 
                  <p>Probando el Pull request y más cosas por ahí XD</p> 
